--- a/index.html
+++ b/index.html
@@ -420,9 +420,11 @@
 
     <div id="Social" class="form-2">
         <div class="container">
+		[embedsocial_hashtag id="bbc60c437dde430b4cea314b2996a2666fd5b201"]
             <div class="embedsocial-hashtag" data-ref="bbc60c437dde430b4cea314b2996a2666fd5b201" ><a class="feed-powered-by-es" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div>
         </div>
     </div>
+	
 
     <!-- Footer -->
     <div id="Footer" class="footer">
