--- a/indexEN.html
+++ b/indexEN.html
@@ -420,7 +420,7 @@
 
     <div id="Social" class="form-2">
         <div class="container">
-            <div class="embedsocial-hashtag" data-ref="bbc60c437dde430b4cea314b2996a2666fd5b201" ><a class="feed-powered-by-es" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div>
+            <div class="embedsocial-hashtag" data-ref="bbc60c437dde430b4cea314b2996a2666fd5b201" ><a class="feed-powered-by-es" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
         </div>
     </div>
 
@@ -459,6 +459,5 @@
     <script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
     <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
-    <script src="js/instagram-api.min.js"></script> <!-- instagram Api -->
 </body>
 </html>
