--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 	
 
     <!-- Footer -->
-    <div id="Footer" class="footer">
+    <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -436,6 +436,11 @@
                         <br><br>
                         <h4>Telefono de contacto</h4>
                         <p class="white">(512) 290-7284 <br> Estamos a su orden.</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-md-6">
+                    <div class="map-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.261977747468!2d-96.94189358481638!3d32.838314580953416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e832107f4ecf3%3A0xe3b1caeb22c6485b!2sOne%20Irving%20Plaza%20-%20Office%20Building!5e0!3m2!1ses-419!2sus!4v1630398538285!5m2!1ses-419!2sus" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
