--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
+     <div id="Footer" class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
