--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 	
 
     <!-- Footer -->
-    <div class="footer">
+     <div id="Footer" class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
