--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="card">
                         <span class="fa-stack">
                             <span class="hexagon"></span>
-                            <i class="fas fa-binoculars fa-stack-1x"></i>
+                            <i class="far fa-eye fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Explora lo que tenemos para ti</h4>
@@ -193,8 +193,8 @@
                     <!-- Card -->
                     <div class="card">
                         <span class="fa-stack">
-                            <span class="hexagon"></span>¿
-                            <i class="fas fa-search fa-stack-1x"></i>
+                            <span class="hexagon"></span>
+                            <i class="far fa-comment fa-stack-1x"></i>
                         </span>
                         <div class="card-body">
                             <h4 class="card-title">Consulta</h4>
